--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ cffi==1.14.6
 cycler==0.10.0
 decorator==5.1.0
 face-alignment==1.3.5
+firebase-admin==6.5.0
 imageio==2.9.0
 imageio-ffmpeg==0.4.5
 kiwisolver==1.3.2
 matplotlib==3.4.3
 networkx==2.6.3
-numpy==1.20.3
+numpy==1.22.0
+packaging==24.0
 pandas==1.3.3
 Pillow==8.3.2
 pycparser==2.20
@@ -16,10 +18,12 @@ python-dateutil==2.8.2
 pytz==2021.1
 PyWavelets==1.1.1
 PyYAML==5.4.1
+requests==2.31.0
+runpod==1.6.2
 scikit-image==0.18.3
 scikit-learn==1.0
 scipy==1.7.1
 six==1.16.0
 torch==1.10.0+cu113
 torchvision==0.11.0+cu113
-tqdm==4.62.3
+tqdm==4.66.2
